--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             <div class="cell">
               <img src="Image/rider.jpg" alt="image">
             </div>
+               <div class="cell">
+              <img src="Image/mcdo.jpg" alt="image">
+            </div>
          </section>
 
          <!-- SECTION 3: Testimony -->
@@ -179,3 +182,4 @@
 
 </body>
 </html>
+
