--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
          <!-- SECTION 2: Skills -->
          <section id="skills" class="skills-section">
-          <h2>Experience</h2>
+          <h2>Skills</h2>
           <div class="text">
             I have gained diverse work experience across different fields, including serving as a delivery rider where I developed time management and navigation skills. As a music gig performer (freelance), I enhanced my creativity, confidence, and teamwork. I also worked in aircon cleaning services and as a BBQ food stall vendor, which strengthened my customer service and hands-on technical abilities. Additionally, my role as a youth leader helped me build leadership, communication, and organizational skills.
           </div>
@@ -182,5 +182,6 @@
 
 </body>
 </html>
+
 
 
